--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "homepage": "https://github.com/phated/bach",
   "devDependencies": {
-    "tap": "^0.4.8"
+    "tap": "~0.4.8"
   },
   "dependencies": {
     "async-settle": "~0.1.0",
