--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "async": "~0.2.10",
     "async-done": "~0.2.0",
     "async-settle": "~0.1.0",
+    "async-time": "~0.0.1",
     "lodash": "~2.4.1"
   }
 }
