--- a/package.json
+++ b/package.json
@@ -29,10 +29,9 @@
     "tap": "~0.4.8"
   },
   "dependencies": {
-    "async": "~0.2.10",
     "async-done": "~0.3.0",
     "async-settle": "~0.1.0",
-    "async-time": "~0.0.1",
-    "lodash": "~2.4.1"
+    "lodash": "~2.4.1",
+    "now-and-later": "0.0.2"
   }
 }
