--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "tap ./test/*.js",
-    "cover": "istanbul cover ./test/cover/index.js"
+    "test": "lab -cv"
   },
   "repository": {
     "type": "git",
@@ -27,14 +26,12 @@
   },
   "homepage": "https://github.com/phated/bach",
   "devDependencies": {
-    "istanbul": "^0.3.0",
-    "require-dir": "^0.1.0",
-    "tap": "~0.4.8"
+    "lab": "^4.1.0"
   },
   "dependencies": {
-    "async-done": "~0.3.0",
-    "async-settle": "~0.1.0",
+    "async-done": "~0.4.0",
+    "async-settle": "~0.2.0",
     "lodash": "~2.4.1",
-    "now-and-later": "0.0.3"
+    "now-and-later": "0.0.4"
   }
 }
