--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "node": ">= 0.10"
   },
   "main": "index.js",
+  "files": [
+    "index.js",
+    "lib",
+    "LICENSE"
+  ],
   "scripts": {
     "test": "lab -cv",
     "lint": "jshint test lib index.js --reporter node_modules/jshint-stylish/stylish.js --exclude node_modules"
