--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "Pawel Kozlowski <pkozlowski.opensource@gmail.com>",
     "Benjamin Tan <demoneaux@gmail.com> (https://d10.github.io/)"
   ],
-  "repository": "phated/bach",
+  "repository": "gulpjs/bach",
   "license": "MIT",
   "engines": {
     "node": ">= 0.10"
@@ -20,8 +20,9 @@
     "LICENSE"
   ],
   "scripts": {
+    "pretest": "npm run lint",
     "test": "lab -cv",
-    "lint": "jshint test lib index.js --reporter node_modules/jshint-stylish/index.js --exclude node_modules"
+    "lint": "eslint . && jscs *.js lib/ test/"
   },
   "dependencies": {
     "async-done": "^1.1.1",
@@ -31,8 +32,10 @@
   },
   "devDependencies": {
     "code": "^1.5.0",
-    "jshint": "^2.8.0",
-    "jshint-stylish": "^2.0.1",
+    "eslint": "^1.7.3",
+    "eslint-config-gulp": "^2.0.0",
+    "jscs": "^2.3.5",
+    "jscs-preset-gulp": "^1.0.0",
     "lab": "^6.2.0"
   },
   "keywords": [
