--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "LICENSE"
   ],
   "scripts": {
+    "lint": "eslint . && jscs index.js lib/ test/",
     "pretest": "npm run lint",
-    "test": "lab -cv",
-    "lint": "eslint . && jscs *.js lib/ test/"
+    "test": "mocha --async-only",
+    "cover": "istanbul cover _mocha --report lcovonly",
+    "coveralls": "npm run cover && istanbul-coveralls"
   },
   "dependencies": {
     "async-done": "^1.1.1",
@@ -36,12 +38,14 @@
     "now-and-later": "0.0.6"
   },
   "devDependencies": {
-    "code": "^1.5.0",
     "eslint": "^1.7.3",
     "eslint-config-gulp": "^2.0.0",
+    "expect": "^1.19.0",
+    "istanbul": "^0.4.3",
+    "istanbul-coveralls": "^1.0.3",
     "jscs": "^2.3.5",
     "jscs-preset-gulp": "^1.0.0",
-    "lab": "^6.2.0"
+    "mocha": "^2.4.5"
   },
   "keywords": [
     "compose",
