--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "coveralls": "npm run cover && istanbul-coveralls"
   },
   "dependencies": {
-    "async-done": "^1.1.1",
-    "async-settle": "^0.2.1",
+    "async-done": "^1.2.2",
+    "async-settle": "^1.0.0",
     "lodash.filter": "^4.1.0",
     "lodash.flatten": "^4.0.0",
     "lodash.foreach": "^4.0.0",
     "lodash.initial": "^4.0.1",
     "lodash.last": "^3.0.0",
     "lodash.map": "^4.1.0",
-    "now-and-later": "0.0.6"
+    "now-and-later": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^1.7.3",
