--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "bach",
   "version": "0.5.0",
-  "description": "Compose your async functions with elegance",
-  "author": "Blaine Bublitz <blaine@iceddev.com> (http://iceddev.com/)",
+  "description": "Compose your async functions with elegance.",
+  "author": "Gulp Team <team@gulpjs.com> (http://gulpjs.com/)",
   "contributors": [
-    "Blaine Bublitz <blaine@iceddev.com> (http://iceddev.com/)",
+    "Blaine Bublitz <blaine.bublitz@gmail.com>",
     "Pawel Kozlowski <pkozlowski.opensource@gmail.com>",
-    "Benjamin Tan <demoneaux@gmail.com> (https://d10.github.io/)"
+    "Benjamin Tan <demoneaux@gmail.com>"
   ],
   "repository": "gulpjs/bach",
   "license": "MIT",
