--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "bach",
   "version": "1.2.0",
   "description": "Compose your async functions with elegance.",
-  "author": "Gulp Team <team@gulpjs.com> (http://gulpjs.com/)",
+  "author": "Gulp Team <team@gulpjs.com> (https://gulpjs.com/)",
   "contributors": [
     "Blaine Bublitz <blaine.bublitz@gmail.com>",
     "Pawel Kozlowski <pkozlowski.opensource@gmail.com>",
@@ -25,7 +25,6 @@
     "test": "nyc mocha --async-only"
   },
   "dependencies": {
-    "arr-flatten": "^1.0.1",
     "async-done": "^2.0.0",
     "async-settle": "^2.0.0",
     "now-and-later": "^3.0.0"
